# round-ai-slack-bot

./: .env.example  .gitignore  alembic.ini  pyproject.toml  readme.md  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial_app_metrics.py  0002_insert_dummy_data.py  0003_create_slack_workspaces.py
app/: main.py
app/agent/: __init__.py  agent.py  chat_history.py
app/ai/: __init__.py
app/ai/agents/: base_agent.py  nl2sql_agent.py
app/ai/history_manager/: __init__.py  history_manager.py
app/ai/intent_classifier/: __init__.py  base_classifier.py  factory.py
app/ai/intent_classifier/regex/: __init__.py  intent_patterns.json  regex_classifier.py
app/ai/intent_classifier/semantic/: __init__.py  intent_examples.json  semantic_classifier.py
app/ai/prompts/: __init__.py  nl2sql_prompts.py
app/ai/services/: nl2sql_service.py
app/ai/tools/: __init__.py  sql_tool.py
app/api/: agent.py  cache.py  slack.py
app/cache/: __init__.py  base.py  factory.py  memory_cache.py  redis_cache.py
app/core/: config.py  logging_config.py
app/db/: __init__.py  database.py  utils.py
app/models/: __init__.py  app_metrics.py  nl2sql_response.py  slack_workspace.py
app/observability/: __init__.py  decorators.py  tracer.py
app/slack/: __init__.py  bot.py  oauth.py
app/utils/: __init__.py  csv_utils.py  drive_utils.py
scripts/: generate_sample_data.py
